# stock_news_sentiments

./: .gitignore  README.md  pyproject.toml
docs/: OPERATIONS.md
latest/: best_candidates.md  dashboard.md  run_summary.json
news/: .news_state.json  news_update_coverage_20260412T092922Z.csv  news_update_coverage_20260412T093324Z.csv  news_update_coverage_20260412T095233Z.csv  news_update_coverage_20260412T143227Z.csv  news_update_coverage_20260413T120622Z.csv  news_update_coverage_20260413T123606Z.csv  news_update_coverage_20260413T144528Z.csv  news_update_coverage_20260413T144641Z.csv  news_update_coverage_20260414T040050Z.csv  news_update_coverage_20260414T091550Z.csv  news_update_coverage_20260415T040129Z.csv  news_update_coverage_20260415T091550Z.csv  news_update_coverage_20260416T040107Z.csv  news_update_coverage_20260416T091557Z.csv  news_update_coverage_20260417T040058Z.csv  news_update_coverage_20260417T091537Z.csv  news_update_coverage_20260418T040132Z.csv  news_update_coverage_20260418T091547Z.csv  news_update_coverage_20260419T040133Z.csv  news_update_coverage_20260419T091546Z.csv  news_update_coverage_20260420T040133Z.csv  news_update_coverage_20260420T091547Z.csv  news_update_coverage_20260421T040043Z.csv  news_update_coverage_20260421T091608Z.csv  news_update_coverage_20260422T040037Z.csv  news_update_coverage_20260422T091602Z.csv  news_update_coverage_20260423T040038Z.csv  news_update_coverage_20260423T091604Z.csv  news_update_coverage_20260424T040037Z.csv  news_update_coverage_20260424T091549Z.csv  news_update_coverage_20260425T040037Z.csv  (+3 more)
(+2912 files in other folders)
